--- a/ROS_IMUUtils/ROS_IMUUtil.csproj
+++ b/ROS_IMUUtils/ROS_IMUUtil.csproj
@@ -125,7 +125,7 @@
   <ItemGroup>
     <Reference Include="Messages, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Messages\Messages.dll</HintPath>
+      <HintPath>$(SolutionDir)Messages\Messages.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
