--- a/MotorBarGraph/MotorBarGraphUC.csproj
+++ b/MotorBarGraph/MotorBarGraphUC.csproj
@@ -80,7 +80,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Messages">
-      <HintPath>..\Messages\Messages.dll</HintPath>
+      <HintPath>$(SolutionDir)Messages\Messages.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
