--- a/SimpleSubscriber/SimpleSubscriber/SimpleSubscriber.csproj
+++ b/SimpleSubscriber/SimpleSubscriber/SimpleSubscriber.csproj
@@ -76,7 +76,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Messages">
-      <HintPath>..\..\Messages\Messages.dll</HintPath>
+      <HintPath>$(SolutionDir)Messages\Messages.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
