--- a/TransformTestLib/TransformTestLib.csproj
+++ b/TransformTestLib/TransformTestLib.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Messages">
-      <HintPath>..\Messages\Messages.dll</HintPath>
+      <HintPath>$(SolutionDir)Messages\Messages.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
