--- a/XNA_Image_Example/XNA_Image_Example/XNA_Image_Example.csproj
+++ b/XNA_Image_Example/XNA_Image_Example/XNA_Image_Example.csproj
@@ -62,7 +62,7 @@
   <ItemGroup>
     <Reference Include="Messages, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Messages\Messages.dll</HintPath>
+      <HintPath>$(SolutionDir)Messages\Messages.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
