--- a/XmlRpc_Wrapper/XmlRpc_Wrapper_UNITY.csproj
+++ b/XmlRpc_Wrapper/XmlRpc_Wrapper_UNITY.csproj
@@ -73,14 +73,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{31A64FAA-CC90-4549-A028-752002015E2C}</ProjectGuid>
+    <ProjectGuid>{8B7DB66C-9C03-4078-9276-B6A760CD4C2C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>XmlRpc_Wrapper</RootNamespace>
     <AssemblyName>XmlRpc_Wrapper</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
