More unity support: fix missing method exception in ROS.Init, and use 3.5 for tf.net (which will now have thread safety issues with transformer's dicts... future work)

--- a/ROS_Comm/ROS_C-Sharp_UNITY.csproj
+++ b/ROS_Comm/ROS_C-Sharp_UNITY.csproj
@@ -74,7 +74,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG</DefineConstants>
+    <DefineConstants>DEBUG;FOR_UNITY</DefineConstants>
     <Optimize>false</Optimize>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
