--- a/ROS_Comm/ROS_C-Sharp_UNITY.csproj
+++ b/ROS_Comm/ROS_C-Sharp_UNITY.csproj
@@ -207,9 +207,9 @@
       <Project>{8B7DB66C-9C03-4078-9276-B6A760CD4C2C}</Project>
       <Name>XmlRpc_Wrapper_UNITY</Name>
     </ProjectReference>
-    <ProjectReference Include="..\YAMLParser\YAMLParser.csproj">
+    <ProjectReference Include="..\YAMLParser\YAMLParser_UNITY.csproj">
       <Project>{EFD1C674-0E1B-44E4-8AC9-DC9CCA7DCDCD}</Project>
-      <Name>YAMLParser</Name>
+      <Name>YAMLParser_UNITY</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
