--- a/tf.net/tf.net_UNITY.csproj
+++ b/tf.net/tf.net_UNITY.csproj
@@ -83,13 +83,13 @@
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ROS_Comm\ROS_C-Sharp.csproj">
+    <ProjectReference Include="..\ROS_Comm\ROS_C-Sharp_UNITY.csproj">
       <Project>{586A3B66-104A-4182-82C2-88DC120F10AC}</Project>
-      <Name>ROS_C-Sharp</Name>
+      <Name>ROS_C-Sharp_UNITY</Name>
     </ProjectReference>
-    <ProjectReference Include="..\XmlRpc_Wrapper\XmlRpc_Wrapper.csproj">
+    <ProjectReference Include="..\XmlRpc_Wrapper\XmlRpc_Wrapper_UNITY.csproj">
       <Project>{8B7DB66C-9C03-4078-9276-B6A760CD4C2C}</Project>
-      <Name>XmlRpc_Wrapper</Name>
+      <Name>XmlRpc_Wrapper_UNITY</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
