--- a/XmlRpc_Wrapper/XmlRpc_Wrapper_UNITY.csproj
+++ b/XmlRpc_Wrapper/XmlRpc_Wrapper_UNITY.csproj
@@ -37,8 +37,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants>FOR_UNITY</DefineConstants>
     <Optimize>false</Optimize>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
