--- a/Listener/Listener.csproj
+++ b/Listener/Listener.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{0A642FA3-58AB-4DBD-94DD-87948062F559}</ProjectGuid>
+    <ProjectGuid>{D6D6BC46-524E-4DE5-8B9D-9CD7E47DD4C6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Talker</RootNamespace>
-    <AssemblyName>Talker</AssemblyName>
+    <RootNamespace>Listener</RootNamespace>
+    <AssemblyName>Listener</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
