Add a means of counting the frequency at which specific arbitrary lines in other files are encountered.

--- a/ROS_Comm/ROS_C-Sharp.csproj
+++ b/ROS_Comm/ROS_C-Sharp.csproj
@@ -125,6 +125,7 @@
     <Compile Include="ConnectionManager.cs" />
     <Compile Include="MessageAndSerializerFunc.cs" />
     <Compile Include="RemappingHelper.cs" />
+    <Compile Include="ScopedTimer.cs" />
     <Compile Include="ServiceClientLink.cs" />
     <Compile Include="LocalSubscriberLink.cs" />
     <Compile Include="LocalPublisherLink.cs" />
