--- a/Listener/Listener.csproj
+++ b/Listener/Listener.csproj
@@ -180,9 +180,17 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MeshLib\MeshLib.csproj">
+      <Project>{84aa3aa6-3ff1-4afb-a18a-9c9dcf1bbd79}</Project>
+      <Name>MeshLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ROS_Comm\ROS_C-Sharp.csproj">
       <Project>{586A3B66-104A-4182-82C2-88DC120F10AC}</Project>
       <Name>ROS_C-Sharp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\tf.net\tf.net.csproj">
+      <Project>{3f4be4aa-4bde-4976-a69d-c2ccb848e3bb}</Project>
+      <Name>tf.net</Name>
     </ProjectReference>
     <ProjectReference Include="..\XmlRpc_Wrapper\XmlRpc_Wrapper.csproj">
       <Project>{8B7DB66C-9C03-4078-9276-B6A760CD4C2C}</Project>
@@ -194,7 +202,18 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ackermann_vehicle_description\meshes\mrm_cover.dae">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="ackermann_vehicle_description\meshes\rplidar.dae">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ackermann_vehicle_description\meshes\e5bbd1477f543ce38d4f4eb73c2ca2ad.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
