Add ScopedTimer.cs in Unity project
Otherwise the unity wrapper does not compile

--- a/ROS_Comm/ROS_C-Sharp_UNITY.csproj
+++ b/ROS_Comm/ROS_C-Sharp_UNITY.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Publisher.cs" />
     <Compile Include="PublisherLink.cs" />
     <Compile Include="RosOutAppender.cs" />
+    <Compile Include="ScopedTimer.cs" />
     <Compile Include="Service.cs" />
     <Compile Include="ServiceCallbackHelper.cs" />
     <Compile Include="ServiceClient.cs" />
