[WIP] Effective method of handling simple ROS.NET application templates?

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ Release/*.pdb
 msg_gen/msg_gen.exe
 *.Debug.cachefile
 XmlRpc_Wrapper/XmlRpcWin32.instr.pdb
+ROS.NET_Console_Application.zip
+ROS.NET_WPF_Application.zip
